# hiktools

./: .gitignore  LICENSE  README  README.md  pyproject.toml
cpp/: CMakeLists.txt  Doxyfile  README.md  adapter.cpp  adapter.h  checksum.cpp  checksum.h  ethernet.cpp  ethernet.h  eventing.h  sadplib.cpp  sadplib.h  sadptool.cpp
docs/: conf.py  csadp.rst  fmod.rst  index.rst  sadp.rst
gists/: firmwarelist.json
gists/csadp/: CPacketSender.cpp
gists/fmod/: decode_xor16.c
hiktools/: __init__.py
hiktools/csadp/: CService.py  __init__.py  checksum.py  model.py  payloads.py  uarray.py
hiktools/fmod/: __init__.py  __main__.py  digicap.py  export.py
hiktools/sadp/: __init__.py  client.py  message.py
lua/: sadp.lua
